--- a/CoordAnimation/App.xaml
+++ b/CoordAnimation/App.xaml
@@ -5,8 +5,8 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Graphics\Graphics.xaml"/>
                 <ResourceDictionary Source="Global.xaml"/>
-                <ResourceDictionary Source="Graphics.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
