--- a/CoordAnimation/Scene.xaml
+++ b/CoordAnimation/Scene.xaml
@@ -34,7 +34,7 @@
             </Grid.ColumnDefinitions>
 
             <local:Timeline x:Name="timeline" Grid.Row="1" Grid.ColumnSpan="2"/>
-            <local:PropertiesEditor x:Name="VisualObjectsEditor"/>
+            <local:PropertiesEditor x:Name="VisualObjectsEditor" IsExpanded="True"/>
             
             <GridSplitter Grid.Column="0" Width="1" HorizontalAlignment="Right" Background="{StaticResource VSBorderBrush}" Panel.ZIndex="1" Grid.Row="0"/>
             <Grid Grid.Column="1">
