--- a/CoordAnimation/Global.xaml
+++ b/CoordAnimation/Global.xaml
@@ -65,32 +65,6 @@
 
     <SolidColorBrush x:Key="StatusBarIconBrush" po:Freeze="True">#FF606060</SolidColorBrush>
 
-    <Color x:Key="VSHilightColor">#FF007ACC</Color>
-    <Color x:Key="VSSelectColor">#FF3399FF</Color>
-    <Color x:Key="VSMouseOverColor">#FF3E3E40</Color>
-    <Color x:Key="VSBackgroundColor">#FF252526</Color>
-    <Color x:Key="VSBorderBrushColor">#FF3F3F46</Color>
-    <Color x:Key="VSDarkBrushColor">#FF1B1B1C</Color>
-    <Color x:Key="VSBoxBrushColor">#FF333337</Color>
-    <Color x:Key="VSRedColor">#FFF38B76</Color>
-    <Color x:Key="VSGreenColor">#FF8DD28A</Color>
-    <Color x:Key="VSBlueColor">#FF7AC1ff</Color>
-    <Color x:Key="VSYellowColor">#FFD8AC6A</Color>
-    <Color x:Key="VSWhiteColor">#FFC4C4C4</Color>
-
-    <SolidColorBrush x:Key="VSHilight" po:Freeze="True">#FF007ACC</SolidColorBrush>
-    <SolidColorBrush x:Key="VSSelect" po:Freeze="True">#FF3399FF</SolidColorBrush>
-    <SolidColorBrush x:Key="VSMouseOver" po:Freeze="True">#FF3E3E40</SolidColorBrush>
-    <SolidColorBrush x:Key="VSBackground" po:Freeze="True">#FF252526</SolidColorBrush>
-    <SolidColorBrush x:Key="VSBorderBrush" po:Freeze="True">#FF3F3F46</SolidColorBrush>
-    <SolidColorBrush x:Key="VSDarkBrush" po:Freeze="True">#FF1B1B1C</SolidColorBrush>
-    <SolidColorBrush x:Key="VSBoxBrush" po:Freeze="True">#FF333337</SolidColorBrush>
-    <SolidColorBrush x:Key="VSRed" Color="#f38b76"/>
-    <SolidColorBrush x:Key="VSGreen" Color="#8dd28a"/>
-    <SolidColorBrush x:Key="VSBlue" Color="#7ac1ff"/>
-    <SolidColorBrush x:Key="VSYellow" Color="#d8ac6a"/>
-    <SolidColorBrush x:Key="VSWhite" Color="#C4C4C4"/>
-
     <!--================================================== ContextMenus ==================================================-->
 
     <ContextMenu x:Key="ErrorItemCM">
@@ -1282,15 +1256,16 @@
     </Style>
     <Style x:Key="ExpandCollapseToggleStyle" TargetType="ToggleButton">
         <Setter Property="Focusable" Value="False"/>
+        <Setter Property="ClickMode" Value="Press"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ToggleButton">
-                    <Grid Width="15" Height="13" Background="Transparent">
-                        <Path x:Name="ExpandPath" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="1,1,1,1" Fill="Transparent" Stroke="White" StrokeThickness="1" Data="M 3.5 0 L 7 3.5 L 3.5 7 Z"/>
-                    </Grid>
+                    <Border Width="15" Height="15" Background="Transparent">
+                        <Path x:Name="ExpandPath" HorizontalAlignment="Center" VerticalAlignment="Center" Fill="#55FFFFFF" Stroke="White" StrokeThickness="1" Data="M0,0 L3.5,3.5 L0,7Z"/>
+                    </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsChecked" Value="True">
-                            <Setter Property="Data" TargetName="ExpandPath" Value="M 0 3.5 L 7 3.5 L 3.5 7 Z"/>
+                            <Setter Property="Data" TargetName="ExpandPath" Value="M0,1.75 H7 L3.5,5.25Z"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Stroke" TargetName="ExpandPath" Value="#007acc"/>
@@ -1327,7 +1302,7 @@
                 <ControlTemplate TargetType="{x:Type TreeViewItem}">
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition MinWidth="19" Width="Auto"/>
+                            <ColumnDefinition Width="20"/>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
@@ -1335,7 +1310,7 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition/>
                         </Grid.RowDefinitions>
-                        <ToggleButton x:Name="Expander" Style="{StaticResource ExpandCollapseToggleStyle}" IsChecked="{Binding Path=IsExpanded, RelativeSource={RelativeSource TemplatedParent}}" ClickMode="Press"/>
+                        <ToggleButton x:Name="Expander" Style="{StaticResource ExpandCollapseToggleStyle}" IsChecked="{Binding Path=IsExpanded, RelativeSource={RelativeSource TemplatedParent}}"/>
                         <Border Name="Bd" Grid.Column="1" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}">
                             <ContentPresenter x:Name="PART_Header" ContentSource="Header" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
                         </Border>
