--- a/CoordAnimation/Graphics/Graphics.xaml
+++ b/CoordAnimation/Graphics/Graphics.xaml
@@ -1,5 +1,33 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:po="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options">
+
+    <Color x:Key="VSHilightColor">#FF007ACC</Color>
+    <Color x:Key="VSSelectColor">#FF3399FF</Color>
+    <Color x:Key="VSMouseOverColor">#FF3E3E40</Color>
+    <Color x:Key="VSBackgroundColor">#FF252526</Color>
+    <Color x:Key="VSBorderBrushColor">#FF3F3F46</Color>
+    <Color x:Key="VSDarkBrushColor">#FF1B1B1C</Color>
+    <Color x:Key="VSBoxBrushColor">#FF333337</Color>
+    <Color x:Key="VSRedColor">#FFF38B76</Color>
+    <Color x:Key="VSGreenColor">#FF8DD28A</Color>
+    <Color x:Key="VSBlueColor">#FF7AC1ff</Color>
+    <Color x:Key="VSYellowColor">#FFD8AC6A</Color>
+    <Color x:Key="VSWhiteColor">#FFC4C4C4</Color>
+
+    <SolidColorBrush x:Key="VSHilight" po:Freeze="True" Color="#FF007ACC"/>
+    <SolidColorBrush x:Key="VSSelect" po:Freeze="True" Color="#FF3399FF"/>
+    <SolidColorBrush x:Key="VSMouseOver" po:Freeze="True" Color="#FF3E3E40"/>
+    <SolidColorBrush x:Key="VSBackground" po:Freeze="True" Color="#FF252526"/>
+    <SolidColorBrush x:Key="VSBorderBrush" po:Freeze="True" Color="#FF3F3F46"/>
+    <SolidColorBrush x:Key="VSDarkBrush" po:Freeze="True" Color="#FF1B1B1C"/>
+    <SolidColorBrush x:Key="VSBoxBrush" po:Freeze="True" Color="#FF333337"/>
+    <SolidColorBrush x:Key="VSRed" po:Freeze="True" Color="#f38b76"/>
+    <SolidColorBrush x:Key="VSGreen" po:Freeze="True" Color="#8dd28a"/>
+    <SolidColorBrush x:Key="VSBlue" po:Freeze="True" Color="#7ac1ff"/>
+    <SolidColorBrush x:Key="VSYellow" po:Freeze="True" Color="#d8ac6a"/>
+    <SolidColorBrush x:Key="VSWhite" po:Freeze="True" Color="#C4C4C4"/>
+
     <DrawingImage x:Key="DI_Lock">
         <DrawingImage.Drawing>
             <DrawingGroup>
@@ -46,6 +74,15 @@
                     </GeometryDrawing.Pen>
                 </GeometryDrawing>
             </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+    <DrawingImage x:Key="DI_Expander">
+        <DrawingImage.Drawing>
+            <GeometryDrawing Geometry="M0,0 L8,16 L16,0">
+                <GeometryDrawing.Pen>
+                    <Pen Brush="White" Thickness="2"/>
+                </GeometryDrawing.Pen>
+            </GeometryDrawing>
         </DrawingImage.Drawing>
     </DrawingImage>
 
