--- a/CoordAnimation/App.xaml
+++ b/CoordAnimation/App.xaml
@@ -6,7 +6,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Graphics\Graphics.xaml"/>
-                <ResourceDictionary Source="Global.xaml"/>
+                <ResourceDictionary Source="Graphics\Global.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
